After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737793 - hlsdemux: Fix accessing invalidated memory.
hlsdemux: Fix accessing invalidated memory.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-10-02 17:20 UTC by GstBlub
Modified: 2014-10-07 12:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (17.85 KB, patch)
2014-10-02 17:20 UTC, GstBlub
committed Details | Review

Description GstBlub 2014-10-02 17:20:51 UTC
Created attachment 287611 [details] [review]
Patch

In gst_hls_demux_get_next_fragment() the next fragment URI gets
stored in next_fragment_uri, but the gst_hls_demux_updates_loop()
can at any time update the playlist, rendering this string invalid.
Therefore, any data (like key, iv, URIs) that is taken from a
GstM3U8Client needs to be copied. In addition, accessing the
internals of a GstM3U8Client requires locking.
Comment 1 Sebastian Dröge (slomo) 2014-10-07 12:22:47 UTC
commit c87835a79ff31d8d9fe1f71726fb8d466136c21f
Author: Thomas Bluemel <tbluemel@control4.com>
Date:   Thu Oct 2 10:37:57 2014 -0600

    hlsdemux: Fix accessing invalidated memory
    
    In gst_hls_demux_get_next_fragment() the next fragment URI gets
    stored in next_fragment_uri, but the gst_hls_demux_updates_loop()
    can at any time update the playlist, rendering this string invalid.
    Therefore, any data (like key, iv, URIs) that is taken from a
    GstM3U8Client needs to be copied. In addition, accessing the
    internals of a GstM3U8Client requires locking.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=737793